update for deploy

--- a/views/index.erb
+++ b/views/index.erb
@@ -12,9 +12,9 @@
     <div id ="firstdiv">Hello world!
         <div id="navbar">
             <ul id="ourlist">
-                <li><a href="/espanol">Hola Mundo</a></li>
-                <li><a href="/francais">Bonjour Monde</a></li>
-                <li><a href="/norsk">Hallo Verden</a></li>
+                <li><a href='/espanol'>Hola Mundo</a></li>
+                <li><a href='/francais'>Bonjour Monde</a></li>
+                <li><a href='/norsk'>Hallo Verden</a></li>
             </ul>
             </div>
         </div>
